
<resources>
    <string name="app_name">Scanbot SDK Example</string>
    <string name="color_document_filter">Color Document Filter</string>
    <string name="scanbot_binarization_filter">Scanbot Binarization Filter</string>
    <string name="custom_binarization_filter">Custom Binarization Filter</string>
    <string name="brightness_filter">Brightness Filter</string>
    <string name="contrast_filter">Contrast Filter</string>
    <string name="grayscale_filter">Grayscale Filter</string>
    <string name="white_black_point_filter">White Black Point Filter</string>
    <string name="none">None</string>
    <string name="the_demo_expired">The demo app will terminate because of the missing license key. Get your free 30-day license today!</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="get_license">get license</string>
</resources>
